# wishes-backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .worktreeinclude  AGENTS.md  Dockerfile  alembic.ini  config.py  constants.py  db.py  deploy.sh  docker-compose.dev.yaml  docker-compose.yaml  firebase.py  main.py  migrate_to_pg.py  migrate_to_pg.sh  migration.load  pyproject.toml  schemas.py  vk.py
.devcontainer/: devcontainer.json  docker-compose.devcontainer.yaml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 06416f8696df_user_birthdate.py  1382cce781a5_archived_wishes.py  1dbf0fc5d054_firebase_push_token_saved_at.py  22f90244e570_user_photo_path.py  283921af6d7a_add_user_registered_at_field.py  28a00d13a644_initial_models.py  3555be18e5c4_nullable_vk_fields.py  3a27af32987e_wish_link.py  3b4b85568cc0_user_firebase_push_token.py  403c03a04c9e_nullable_vk_access_token.py  498438a8dc1b_add_created_at_to_wish_recommendation.py  582b23eb3019_initial.py  5e0f90c5ef9e_followers_relation.py  704004b8dd8a_wish_reservation.py  71c61be4c32e_postgres_initial.py  78d8787d056f_user_vk_access_token.py  7b0c3a26e25e_add_wish_recommendation.py  9c47a1a8e65a_display_name.py  9fdce23cf0a4_add_is_notification_sent_fields.py  (+20 more)
app/: alerts.py  config.py  constants.py  db.py  dependencies.py  firebase.py  logging.py  main.py  notifications.py  parsers.py  scheduler.py  schemas.py  test_auth.py  test_main.py  utils.py  vk.py
scripts/: backfill_profile_images.py  backfill_vk_friends.py  collect_recommendations.py  download_recommendation_images.py  load_recommendations.py  recommendations.json
static/: privacy_policy.html  registration.js
templates/: registration.html
tests/: conftest.py  test_admin.py  test_alerts.py  test_api.py  test_attribution.py  test_auth_extra.py  test_backfill_images.py  test_backfill_vk_friends.py  test_birthday_radar.py  test_cron_at_noon.py  test_cron_backfill_images.py  test_cron_backfill_vk_friends.py  test_cron_others.py  test_db.py  test_dependencies.py  test_dev.py  test_firebase.py  test_main.py  test_main_logic.py  test_notifications.py  test_parsers.py  test_routers_extra.py  test_scheduler.py  test_schemas_extra.py  test_services.py  test_user_helpers.py  test_utils.py  test_vk.py
(+30 files in other folders)
